--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
-html, body {
-    width: 100vw;
-    height: 100vh;
-}
-
 body {
     background: #252525 url(/img/body_bg.png) bottom right no-repeat;
     margin: 0;
 }
 
-.wrapper {
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .centered {
-    max-width: 550px;
     text-align: center;
 }
 
@@ -52,4 +33,86 @@ h1, h2 {
 
 .headshot:hover {
     border-radius: 20%;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+}
+
+.wrapper {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.tagline {
+    display: flex;
+    flex-direction: row;
+}
+
+.tagline span {
+    display: block;
+}
+
+@media screen and (min-width: 992px) {
+    .tagline span:not(:first-child):before {
+        font-size: inherit;
+        content: "•";
+        display: inline-block;
+        padding: 0 10px;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    html, body {
+        min-width: 100vw;
+        min-height: 100vh;
+    }
+
+    .wrapper {
+        padding: 80px 0;
+        align-items: flex-start;
+    }
+
+    .headshot {
+        max-width: 60%;
+        max-height: 60%;
+        width: fit-content;
+    }
+
+    .social-links a {
+        font-size: 10em;
+    }
+
+    .centered {
+        max-width: 80%;
+    }
+
+    h1 {
+        font-size: 5em;
+        margin-bottom: 1.5em;
+    }
+
+    h2 {
+        font-size: 3em;
+    }
+
+    .tagline {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .tagline span {
+        min-width: 45%;
+        padding-bottom: 1em;
+    }
 }
