--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
-body {
-    background: #252525 url(/img/body_bg.png) bottom right no-repeat;
-    margin: 0;
-}
-
-.centered {
-    text-align: center;
-}
-
-h1, h2 {
-    color: #f9f9f9;
-    font-family: "Roboto";
-}
-
-.social-links a {
-    font-size: 42px;
-    color: #dedede;
-    padding: 10px;
-}
-
-.social-links a:hover {
-    color: #00CBFC;
-}
-
-.headshot {
-    max-width: 200px;
-    max-height: 200px;
-    border-radius: 50%;
-    transition: border-radius .15s ease;
-}
-
-.headshot:hover {
-    border-radius: 20%;
-}
-
 html, body {
     width: 100vw;
     height: 100vh;
+}
+
+body {
+    background: #252525 url(/img/body_bg.png) bottom right no-repeat;
+    margin: 0;
 }
 
 .wrapper {
@@ -53,13 +23,49 @@ html, body {
     justify-content: center;
 }
 
+.centered {
+    text-align: center;
+}
+
+.headshot {
+    max-width: 200px;
+    max-height: 200px;
+    border-radius: 50%;
+    transition: border-radius .15s ease;
+}
+
+.headshot:hover {
+    border-radius: 20%;
+}
+
+h1 {
+    font-size: 2.5em;
+}
+
 .tagline {
     display: flex;
     flex-direction: row;
+    margin-bottom: 1em;
+    font-size: 1.5em;
 }
 
 .tagline span {
     display: block;
+}
+
+h1, .tagline {
+    color: #f9f9f9;
+    font-family: "Roboto";
+}
+
+.social-links a {
+    font-size: 42px;
+    color: #dedede;
+    padding: 10px;
+}
+
+.social-links a:hover {
+    color: #00CBFC;
 }
 
 @media screen and (min-width: 992px) {
@@ -78,34 +84,28 @@ html, body {
     }
 
     .wrapper {
-        padding: 80px 0;
         align-items: flex-start;
-    }
-
-    .headshot {
-        max-width: 60%;
-        max-height: 60%;
-        width: fit-content;
-    }
-
-    .social-links a {
-        font-size: 10em;
     }
 
     .centered {
         max-width: 80%;
     }
 
+    .headshot {
+        max-width: 60%;
+        max-height: 60%;
+        width: fit-content;
+        padding: 6em 0;
+    }
+
     h1 {
         font-size: 5em;
+        margin-top: 0;
         margin-bottom: 1.5em;
     }
 
-    h2 {
-        font-size: 3em;
-    }
-
     .tagline {
+        font-size: 3em;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -114,5 +114,9 @@ html, body {
     .tagline span {
         min-width: 45%;
         padding-bottom: 1em;
+    }
+
+    .social-links a {
+        font-size: 10em;
     }
 }
